# kinozal_etl

./: README.md  pyproject.toml  settings.py
db/: pg_db.py  sqlite_db.py
postgresql_to_elastic/extractors/: movies.py
postgresql_to_elastic/loaders/: movies.py
sqlite_to_postgresql/: load_data.py
utility/: backoff.py
