[tool.poetry]
name = "etl"
version = "0.0.1"
description = ""
authors = ["petr777 <Mazurok Petr>"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.9.0"
loguru = "^0.6.0"
python-dotenv = "^0.20.0"
flake8 = "^4.0.1"

psycopg2-binary = "^2.9.3"
elasticsearch = "7.17.1"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
